# speedtest

./: CMakeLists.txt  CMakePresets.json  PGMImage.cpp  PGMImage.h  README.md  TiffSrcFile.cpp  TiffSrcFile.h  TocErrors.h  speedtests.cpp  speedtests.h  test_cuda.cu
